--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 body {
     font-family: Arial, sans-serif;
     background-color: #f8f9fa;
-    margin: 40px;
+    max-width: 900px;
+    margin: 60px;
+    padding: 0 20px;
     color: #333;
 }
 
@@ -16,4 +18,111 @@ a {
 .dark-mode {
     background-color: #121212;
     color: #f0f0f0;
+}
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    animation: fadeInUp 1s forwards;
+}
+
+.fade-in:nth-child(2) {
+    animation-delay: 0.3s;
+}
+.fade-in:nth-child(3) {
+    animation-delay: 0.6s;
+}
+
+@keyframes fadeInUp {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+button:hover {
+    background-color: #cdcdcd;
+    transition: 0.3s;
+}
+.project-card {
+    background-color: #fefefe;
+    color: #333; /* <-- Добавляем! */
+    border: 1px solid #ccc;
+    padding: 20px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    transition: all 0.3s;
+}
+
+.project-card:hover {
+    transform: scale(1.02);
+    background-color: #f0f8ff;
+}
+
+.project-card a {
+    display: inline-block;
+    margin-top: 10px;
+    color: #2980b9;
+    text-decoration: none;
+}
+.dark-theme .project-card {
+    background-color: #1e1e1e;
+    color: #f0f0f0; /* <-- И здесь явно */
+    border-color: #333;
+    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.05);
+}
+.navbar{
+position: fixed;
+top: 0;
+left: 0;
+right: 0;
+background-color: #333;
+padding: 10px 0;
+z-index: 1000;
+}
+.navbar ul {
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    align-items: center;
+    gap: 20px;
+    margin: 0;
+    padding: 0;
+}
+
+.navbar li {
+    margin: 0 15px;
+}
+
+.navbar a {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    margin: 4px;
+}
+
+.navbar a:hover {
+    text-decoration: underline;
+}
+section, header {
+    padding-top: 100px; /* отступ сверху */
+    margin-bottom: 40px;
+}
+
+html {
+    scroll-behavior: smooth;
+}
+
+button {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 8px;
+    background-color: #007acc;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+button:hover {
+    background-color: #005fa3;
+    transition: 0.3s;
 }
